- fixing pill spacing

--- a/scss/site.scss
+++ b/scss/site.scss
@@ -64,4 +64,5 @@ header {
 .resume .label {
   margin-top: 2px;
   margin-bottom: 2px;
+  display: inline-block;
 }
